force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>This is a logging object used for logging exception via logging framework utility.</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>LOG-{0}</displayFormat>
        <label>Exception Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>