force-app/main/default/objects/Exception_Log__c/fields/Exception_Stack__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack__c</fullName>
    <description>Exception Stack trace</description>
    <label>Exception Stack</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>