force-app/main/default/objects/Exception_Log__c/fields/Governance_Limits__c.field-meta.xml
<CustomField>
    <fullName>Governance_Limits__c</fullName>
    <label>Governance Limits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>