force-app/main/default/objects/Exception_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Method Name where exception occured</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>